# evennia-contribs-staging

./: .anonymity-patterns.example  .gitignore  .pre-commit-config.yaml  CODING_STYLE.md  CONTRIBUTING.md  README.md  pyproject.toml
contribs/base_systems/evennia_links/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  apps.py  archiving.py  editing.py  links.py  listeners.py  pyproject.toml  softref.py  tests.py  versioning.py
contribs/game_systems/evennia_boards/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  admin.py  apps.py  authoring.py  commands.py  forms.py  listeners.py  models.py  permissions.py  pyproject.toml  signals.py  tests.py  urls.py  views.py
contribs/game_systems/evennia_boards/api/: pagination.py  serializers.py  urls.py  views.py
contribs/game_systems/evennia_boards/integrations/: __init__.py  xp.py
contribs/game_systems/evennia_boards/migrations/: 0001_initial.py
contribs/game_systems/evennia_boards/templates/evennia_boards/: board_detail.html  board_list.html  post_edit_form.html  post_form.html
contribs/game_systems/evennia_calendar/: CHANGELOG.md  LICENSE  MIGRATION_NOTES.md  README.md  __init__.py  admin.py  apps.py  authoring.py  commands.py  forms.py  models.py  permissions.py  pyproject.toml  scheduler.py  signals.py  tests.py  urls.py  views.py
contribs/game_systems/evennia_calendar/api/: filters.py  pagination.py  serializers.py  urls.py  views.py
contribs/game_systems/evennia_calendar/migrations/: 0001_initial.py  0002_scenecalendarlink.py
contribs/game_systems/evennia_calendar/templates/evennia_calendar/: calendar_cluster.html  calendar_detail.html  calendar_list.html  calendar_month.html  cluster_form.html  cluster_membership_form.html  event_cancel.html  event_form.html  event_invite_form.html  event_tag_create_form.html  event_tag_form.html  exclusion_form.html
contribs/game_systems/evennia_jobs/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  admin.py  apps.py  authoring.py  commands.py  forms.py  models.py  permissions.py  pyproject.toml  tests.py  urls.py  views.py
contribs/game_systems/evennia_jobs/api/: filters.py  pagination.py  serializers.py  urls.py  views.py
contribs/game_systems/evennia_jobs/migrations/: 0001_initial.py  0002_alter_job_options.py
contribs/game_systems/evennia_jobs/templates/evennia_jobs/: _empty_state.html  _pagination.html  job_comment_form.html  job_detail.html  job_form.html  job_list.html
contribs/game_systems/evennia_lore/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  admin.py  apps.py  authoring.py  commands.py  editing.py  forms.py  listeners.py  models.py  permissions.py  pyproject.toml  selection.py  signals.py  tests.py  urls.py  views.py
contribs/game_systems/evennia_lore/api/: filters.py  pagination.py  serializers.py  urls.py  views.py
contribs/game_systems/evennia_lore/integrations/: xp.py
contribs/game_systems/evennia_lore/migrations/: 0001_initial.py  0002_loreinspirationcredit.py
contribs/game_systems/evennia_lore/templates/evennia_lore/: _empty_state.html  _pagination.html  lore_compendium.html  lore_detail.html  lore_diff.html  lore_form.html  lore_history.html  lore_lean_form.html  lore_list.html  lore_queue.html
contribs/game_systems/evennia_plots/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  admin.py  antigaming.py  apps.py  authoring.py  collectors.py  commands.py  forms.py  gating.py  listeners.py  models.py  permissions.py  pyproject.toml  signals.py  tests.py  urls.py  views.py
contribs/game_systems/evennia_plots/api/: filters.py  pagination.py  serializers.py  urls.py  views.py
contribs/game_systems/evennia_plots/integrations/: antigaming.py  gating.py  xp.py
contribs/game_systems/evennia_plots/migrations/: 0001_initial.py
contribs/game_systems/evennia_plots/templates/evennia_plots/: plot_arc_detail.html  plot_arc_form.html  plot_arc_list.html  plot_detail.html  plot_edit_form.html  plot_form.html  plot_invite_form.html  plot_list.html  plot_tag_create_form.html  plot_tags.html  (+4 more)
contribs/game_systems/evennia_posing/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  apps.py  commands.py  highlighting.py  pyproject.toml  signals.py  tests.py  typeclasses.py
contribs/game_systems/evennia_rptracker/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  admin.py  antigaming.py  apps.py  bridges_scenes.py  commands.py  models.py  pyproject.toml  scripts.py  signals.py  tests.py  tracker.py
contribs/game_systems/evennia_rptracker/integrations/: xp.py
contribs/game_systems/evennia_rptracker/migrations/: 0001_initial.py
contribs/game_systems/evennia_scenes/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  admin.py  apps.py  authoring.py  capture.py  commands.py  display.py  forms.py  models.py  permissions.py  pyproject.toml  signals.py  tests.py  urls.py  views.py
contribs/game_systems/evennia_scenes/api/: pagination.py  serializers.py  urls.py  views.py
contribs/game_systems/evennia_scenes/migrations/: 0001_initial.py
contribs/game_systems/evennia_social/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  apps.py  pyproject.toml  search.py  social.py  typeclasses.py
contribs/game_systems/evennia_social/commands/: __init__.py  discovery.py  filtering.py  finger.py  messaging.py  navigation.py  ooc.py  roomconfig.py  roulette.py  tel.py  teleportation.py
contribs/game_systems/evennia_social/tests/: base.py  test_commands.py  test_typeclasses.py
contribs/game_systems/evennia_xp/: CHANGELOG.md  LICENSE  MIGRATION_NOTES.md  README.md  __init__.py  admin.py  antigaming.py  apps.py  awards.py  batch.py  commands.py  gating.py  models.py  permissions.py  pyproject.toml  scripts.py  signals.py  tests.py  urls.py  views.py
contribs/game_systems/evennia_xp/api/: pagination.py  serializers.py  urls.py  views.py
contribs/game_systems/evennia_xp/migrations/: 0001_initial.py
contribs/utils/evennia_accessibility/: CHANGELOG.md  MIGRATION_NOTES.md  README.md  __init__.py  accessibility.py  apps.py  forms.py  mxp.py  pyproject.toml  tests.py
(+34 files in other folders)
