[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evennia-rptracker"
version = "0.1.1"
description = "Passive RP session detection and tracking for Evennia games."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "an0n-b1nary" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
]
# evennia-links provides AbstractLink (the base of RPSessionSceneLink, which
# ships unconditionally) and connect_soft_ref_cleanup (used by the scene bridge).
dependencies = ["evennia>=6.0", "evennia-links>=0.2"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/an0n-b1nary/evennia-contribs-staging"
Issues = "https://github.com/an0n-b1nary/evennia-contribs-staging/issues"

# Flat layout: package contents live at the same level as this pyproject.toml.
# Mirrors Evennia upstream's flat per-contrib structure.
[tool.setuptools]
packages = ["evennia_rptracker", "evennia_rptracker.migrations", "evennia_rptracker.integrations"]

[tool.setuptools.package-dir]
"evennia_rptracker" = "."
"evennia_rptracker.migrations" = "migrations"
"evennia_rptracker.integrations" = "integrations"
